--- a/package.json
+++ b/package.json
@@ -1,12 +1,8 @@
 {
   "name": "twitter-ads",
-  "description": "Twitter Ads API for Javascript",
-  "version": "0.0.3",
+  "description": "Twitter Ads API for NodeJS",
+  "version": "0.0.4",
   "author": "Talha Asad <talha@fallentech.com>",
-  "contributors": [{
-    "name": "Hassan Tariq",
-    "email": "hassan@caniscrator.com"
-  }],
   "license": "MIT",
   "homepage": "http://fallentech.github.io/twitter-ads",
   "main": "index.js",
@@ -14,7 +10,7 @@
     "node": ">=0.12.0"
   },
   "dependencies": {
-    "request": "^2.65.0"
+    "request": "^2.67.0"
   },
   "repository": {
     "type": "git",
