--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "twitter-ads",
   "description": "Twitter Ads API for NodeJS",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "author": "Talha Asad <talha@fallentech.com>",
   "license": "MIT",
   "homepage": "http://fallentech.github.io/twitter-ads",
@@ -10,7 +10,9 @@
     "node": ">=0.12.0"
   },
   "dependencies": {
-    "request": "^2.67.0"
+    "request": "^2.67.0",
+    "moment": "^2.11.1",
+    "sync": "^0.2.5"
   },
   "repository": {
     "type": "git",
@@ -20,7 +22,9 @@
     "twitter ads",
     "twitter ads api",
     "twitter advertising",
-    "twitter advertising api"
+    "twitter advertising api",
+    "twitter ton",
+    "twitter ton api"
   ],
   "bugs": {
     "url": "https://github.com/FallenTech/twitter-ads/issues"
